# china

./: .env.example  .gitignore  DEPLOY.md  docker-compose.yml  yandex_8f88d2b963d2bfd0.html
.github/workflows/: backend-ci-deploy.yml
backend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260510_0001_create_leads.py  20260527_0002_trip_lead_fields.py  20260527_0003_lead_program_snapshot.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: leads.py
backend/app/core/: config.py  rate_limit.py
backend/app/models/: lead.py
backend/app/schemas/: lead.py
backend/app/services/: leads.py  telegram.py
backend/robbo_china_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: start.sh
backend/tests/: conftest.py  test_health.py  test_leads.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.mjs
frontend/chinaassets/: краткое тз.txt
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: AnimatedStat.tsx  BookingModal.tsx  LeadForm.tsx  SectionHeading.tsx  SiteFooter.tsx  SiteHeader.tsx
frontend/src/data/: siteData.ts
frontend/src/hooks/: useCountdown.ts  useRevealOnScroll.ts  useTypedWord.ts
frontend/src/sections/: FaqSection.tsx  FinalCtaSection.tsx  GallerySection.tsx  HeroSection.tsx  IncludedSection.tsx  ProcessSection.tsx  (+4 more)
(+1 files in other folders)
