[project]
name = "controlix-backend"
version = "0.1.0"
description = "FastAPI backend for CONTROLIX Group lead collection and analytics"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.29.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "greenlet>=3.1.1",
  "httpx>=0.27.2",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",
  "slowapi>=0.1.9",
  "sqlalchemy[asyncio]>=2.0.35",
  "uvicorn[standard]>=0.30.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
